--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -123,7 +123,7 @@
                 android:textSize="30sp"
                 android:textIsSelectable="false"
                 android:textColor="@color/primary_text"
-                android:id="@+id/textView3" />
+                android:id="@+id/price" />
             <TextView
                 android:paddingRight="15dp"
                 android:paddingLeft="15dp"
