--- a/app/src/main/res/layout/activity_boutique_details.xml
+++ b/app/src/main/res/layout/activity_boutique_details.xml
@@ -13,15 +13,19 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp">
+            >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:id="@+id/boutiqueImg"
                 android:background="@drawable/bg"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="7dp"
+                android:layout_marginRight="7dp">
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -254,7 +258,7 @@
                     android:textColor="@color/accent"/>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
-
+</LinearLayout>
         </LinearLayout>
     </ScrollView>
 
