--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -139,52 +139,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:maxLength="30"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/password"
-                android:textColor="@color/secondary_text"
-                android:id="@+id/textView4"
-                android:layout_below="@+id/user_name_signup"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:id="@+id/password1_signup"
-                android:layout_below="@+id/textView4"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:maxLength="20"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/password_again"
-                android:textColor="@color/secondary_text"
-                android:id="@+id/textView5"
-                android:layout_below="@+id/password1_signup" />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:id="@+id/password2_signup"
-                android:layout_below="@+id/textView5"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:maxLength="30"
+                android:maxLines="1"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -192,7 +148,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="@string/mob_no"
                 android:id="@+id/textView6"
-                android:layout_below="@+id/password2_signup"
+                android:layout_below="@+id/user_name_signup"
                 android:textColor="@color/secondary_text"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
