--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -187,46 +187,11 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:maxLength="40"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/dob"
-                android:id="@+id/textView8"
-                android:textColor="@color/secondary_text"
-                android:layout_below="@+id/email_signup" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/pick_a_date"
-                android:id="@+id/dob_signup"
-                android:textColor="@color/accent"
-                android:layout_below="@+id/textView8"
-                android:layout_centerHorizontal="true"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/anniversary"
-                android:id="@+id/textView9"
-                android:textColor="@color/secondary_text"
-                android:layout_below="@+id/dob_signup" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/pick_a_date"
-                android:id="@+id/anniversary_signup"
-                android:textColor="@color/accent"
-                android:layout_below="@+id/textView9"
-                android:layout_centerHorizontal="true"/>
             <RadioGroup
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/anniversary_signup"
+                android:layout_below="@+id/email_signup"
                 android:id="@+id/gender"
                 android:orientation="horizontal"
                 >
@@ -243,12 +208,45 @@
                     android:id="@+id/female"
                     android:layout_weight="1" />
             </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/dob"
+                android:id="@+id/textView8"
+                android:textColor="@color/secondary_text"
+                android:layout_below="@+id/gender" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/dob_signup"
+                android:textColor="@color/primary_text"
+                android:layout_below="@+id/textView8"
+                android:layout_centerHorizontal="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/anniversary"
+                android:id="@+id/textView9"
+                android:textColor="@color/secondary_text"
+                android:layout_below="@+id/dob_signup" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/anniversary_signup"
+                android:textColor="@color/primary_text"
+                android:layout_below="@+id/textView9"
+                android:layout_centerHorizontal="true"/>
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sign_up"
                 android:id="@+id/button2"
-                android:layout_below="@+id/gender"
+                android:layout_below="@+id/anniversary_signup"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:onClick="sign_up_filled"
@@ -259,7 +257,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
                 android:id="@+id/button1"
-                android:layout_below="@+id/gender"
+                android:layout_below="@+id/anniversary_signup"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="sign_up_cancel"
