--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.tech.thrithvam.boutiqueapp.User"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true" >
     <!--===================================== User login screen=============================================-->
     <ScrollView
     android:layout_width="match_parent"
@@ -49,38 +51,14 @@
             android:layout_alignRight="@+id/nameText"
             android:layout_alignEnd="@+id/nameText" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/password"
-            android:id="@+id/passText"
-            android:layout_below="@+id/mobLogin"
-            android:layout_alignLeft="@+id/mobLogin"
-            android:layout_alignStart="@+id/mobLogin"
-            android:textColor="@color/primary_text" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/passwordLogin"
-            android:layout_below="@+id/passText"
-            android:layout_alignLeft="@+id/passText"
-            android:layout_alignStart="@+id/passText"
-            android:layout_alignRight="@+id/mobLogin"
-            android:layout_alignEnd="@+id/mobLogin"
-            android:maxLength="20"/>
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:id="@+id/login"
-            android:layout_below="@+id/passwordLogin"
-            android:layout_alignRight="@+id/passwordLogin"
-            android:layout_alignEnd="@+id/passwordLogin"
+            android:layout_below="@+id/mobLogin"
+            android:layout_alignRight="@+id/mobLogin"
+            android:layout_alignEnd="@+id/mobLogin"
             android:background="@color/accent"
             android:textColor="@android:color/white"
             android:onClick="login"/>
@@ -90,8 +68,8 @@
             android:layout_height="wrap_content"
             android:text="@string/sign_up"
             android:id="@+id/sign_up"
-            android:layout_alignLeft="@+id/passwordLogin"
-            android:layout_alignStart="@+id/passwordLogin"
+            android:layout_alignLeft="@+id/mobLogin"
+            android:layout_alignStart="@+id/mobLogin"
             android:background="@color/accent"
             android:layout_alignParentBottom="true"
             android:textColor="@android:color/white"
@@ -187,27 +165,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:maxLength="40"/>
-            <RadioGroup
-                android:padding="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/email_signup"
-                android:id="@+id/gender"
-                android:orientation="horizontal"
-                >
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/male"
-                    android:id="@+id/male"
-                    android:layout_weight="1" />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/female"
-                    android:id="@+id/female"
-                    android:layout_weight="1" />
-            </RadioGroup>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -215,7 +173,7 @@
                 android:text="@string/dob"
                 android:id="@+id/textView8"
                 android:textColor="@color/secondary_text"
-                android:layout_below="@+id/gender" />
+                android:layout_below="@+id/email_signup" />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -240,13 +198,33 @@
                 android:textColor="@color/primary_text"
                 android:layout_below="@+id/textView9"
                 android:layout_centerHorizontal="true"/>
-
+            <RadioGroup
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/anniversary_signup"
+                android:id="@+id/gender"
+                android:orientation="horizontal"
+                >
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/male"
+                    android:id="@+id/male"
+                    android:layout_weight="1" />
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/female"
+                    android:id="@+id/female"
+                    android:layout_weight="1" />
+            </RadioGroup>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sign_up"
                 android:id="@+id/button2"
-                android:layout_below="@+id/anniversary_signup"
+                android:layout_below="@+id/gender"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:onClick="sign_up_filled"
@@ -257,7 +235,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cancel"
                 android:id="@+id/button1"
-                android:layout_below="@+id/anniversary_signup"
+                android:layout_below="@+id/gender"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="sign_up_cancel"
@@ -297,7 +275,7 @@
                     android:id="@+id/greeting"
                     android:textColor="@color/primary_text"
                     android:padding="10dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     />
                 <TextView
                     android:layout_width="wrap_content"
@@ -307,7 +285,7 @@
                     android:textColor="@color/primary_text"
                     android:paddingLeft="0dp"
                     android:paddingTop="10dp"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:layout_alignParentTop="true"
                     android:layout_toRightOf="@+id/greeting"
                     android:layout_toEndOf="@+id/greeting" />
@@ -400,7 +378,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="9999999999"
+                    android:text="Mobile"
                     android:id="@+id/mobile_no"
                     android:textColor="@color/primary_text"
                     android:padding="10dp"
@@ -422,7 +400,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="email@server.com"
+                    android:text="Email"
                     android:id="@+id/email"
                     android:textColor="@color/primary_text"
                     android:padding="10dp"
@@ -443,7 +421,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="01-01-2016"
+                    android:text="DateOfBirth"
                     android:id="@+id/dob"
                     android:textColor="@color/primary_text"
                     android:padding="10dp"
@@ -464,7 +442,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="01-01-2016"
+                    android:text="Anniversary"
                     android:id="@+id/anniversary"
                     android:textColor="@color/primary_text"
                     android:padding="10dp"
