--- a/app/src/main/res/layout/activity_owner_and_designer.xml
+++ b/app/src/main/res/layout/activity_owner_and_designer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,10 @@
     tools:context="com.tech.thrithvam.boutiqueapp.OwnerAndDesigner"
     android:background="@color/background"
     android:animateLayoutChanges="true">
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -90,4 +94,14 @@
 
     </LinearLayout>
 </ScrollView>
-</RelativeLayout>
+    </FrameLayout>
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@color/divider"
+        android:dividerHeight="0.5dp"
+        android:background="@android:color/white"/>
+</android.support.v4.widget.DrawerLayout>
