--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -244,10 +244,10 @@
 </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>
     </FrameLayout>
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@android:color/white">
+        android:background="@android:drawable/dialog_holo_light_frame">
         <ListView
             android:id="@+id/left_drawer"
             android:layout_width="match_parent"
@@ -267,7 +267,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/primary_text"
             android:paddingTop="50dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="15dp"
             android:paddingRight="10dp"
             android:text="@string/my_favorites"
             android:layout_below="@id/left_drawer"
