--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/primary_text"
-            android:text="Look knock-out on nights out in figure skimming bodycon fits, flowing maxi lengths and stunning sequin occasion dresses. This season make for satin sheen slip dresses in mink nudes, and match lace trim cami dresses with barely there heels for that cocktail ready combo."
+            android:text="Description Loading..."
             android:id="@+id/description" />
 
 
@@ -123,7 +123,7 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:text="₹ 500"
+                android:text="₹ :"
                 android:textSize="30sp"
                 android:textIsSelectable="false"
                 android:textColor="@color/primary_text"
@@ -136,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Designer: Name"
+                android:text="Designer: "
                 android:textIsSelectable="false"
                 android:textColor="@color/accent"
                 android:id="@+id/view_designer" />
@@ -209,10 +209,10 @@
 </ScrollView>
     </FrameLayout>
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@android:color/white">
+        android:background="@android:drawable/dialog_holo_light_frame">
         <ListView
             android:id="@+id/left_drawer"
             android:layout_width="match_parent"
@@ -232,7 +232,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/primary_text"
             android:paddingTop="50dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="15dp"
             android:paddingRight="10dp"
             android:text="@string/my_favorites"
             android:layout_below="@id/left_drawer"
