--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/gridImg"
-            android:background="@color/primary_dark"
+            android:background="@color/labelBackground"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true">
 
