--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -250,8 +250,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg"
-        android:id="@+id/UserDetails"
-        android:visibility="gone">
+        android:id="@+id/UserDetails">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -353,6 +352,39 @@
                     android:textStyle="bold" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                app:cardCornerRadius="4dp"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/shareText"
+                        android:text="@string/share_text"
+                        android:padding="10dp"
+                        android:textColor="@color/secondary_text"
+                        android:layout_toLeftOf="@+id/share"
+                        android:layout_toStartOf="@+id/share" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:id="@+id/share"
+                        android:src="@drawable/share"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:onClick="shareApp"/>
+                </RelativeLayout>
+                </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
