--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -83,7 +83,7 @@
         android:layout_height="match_parent"
         android:id="@+id/SignUp"
         android:background="@drawable/bg"
-        android:visibility="gone">
+        android:visibility="visible">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -198,11 +198,28 @@
                 android:textColor="@color/primary_text"
                 android:layout_below="@+id/textView9"
                 android:layout_centerHorizontal="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="@string/referral_loyalty"
+                android:id="@+id/textView15"
+                android:textColor="@color/secondary_text"
+                android:layout_below="@+id/anniversary_signup" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/referralLoyalty"
+                android:textColor="@color/primary_text"
+                android:layout_below="@+id/textView15"
+                android:maxLength="10"
+                android:inputType="numberDecimal"/>
             <RadioGroup
                 android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/anniversary_signup"
+                android:layout_below="@+id/referralLoyalty"
                 android:id="@+id/gender"
                 android:orientation="horizontal"
                 >
@@ -250,7 +267,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg"
-        android:id="@+id/UserDetails">
+        android:id="@+id/UserDetails"
+        android:visibility="gone">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
