--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,121 +50,13 @@
         android:background="@color/whiteBackground"
         android:orientation="vertical"
         >
-
-  <!--  <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/newArrival"
-        android:scaleType="centerCrop"
-        android:src="@drawable/na5"/>-->
-<!--
-    <com.daimajia.slider.library.SliderLayout
-        android:id="@+id/slider"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:paddingBottom="10dp"
-        />
-
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider2"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider3"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider4"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider5"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />-->
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider6"
             android:layout_width="match_parent"
             android:layout_height="300dp"
 
             />
-    <!--    <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider8"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
 
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider9"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider10"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider11"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider12"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />
-        <com.daimajia.slider.library.SliderLayout
-            android:id="@+id/slider13"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-
-            android:paddingBottom="10dp"
-            />-->
-   <!-- <TextView
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#ffffff" />
-
-    <TextView
-        android:paddingRight="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView2"
-        android:layout_above="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#ffffff" />-->
         <SearchView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -178,64 +70,19 @@
             />
 
     </RelativeLayout>
-
-
-
             <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/whiteBackground"
-    android:baselineAligned="false">
-
-    <!--        <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:id="@+id/LinearLeft">
-                &lt;!&ndash;<com.daimajia.slider.library.SliderLayout
-                    android:id="@+id/categoriesScroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    />&ndash;&gt;
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="150dp">
+                android:orientation="horizontal"
+                android:background="@color/whiteBackground"
+                android:baselineAligned="false">
 
-    <TextView
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/categoryScroll"
-        android:layout_gravity="center"
-        android:textColor="#ffffff"
-        android:textStyle="bold" />
-</FrameLayout>
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:id="@+id/LinearRight">
-
-                                                <ImageView
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="150dp"
-                                                    android:src="@drawable/offer"/>
-
-            </LinearLayout>-->
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:src="@drawable/offer"
-                    android:scaleType="fitXY"/>
+                    android:scaleType="fitXY"
+                    android:id="@+id/offer"/>
 </LinearLayout>
 
 
